Finished tic-tac-toe, not proud of it tbh

--- a/index.html
+++ b/index.html
@@ -6,8 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="main.css">
+    <script src="gameboard.js" defer></script>
 </head>
 <body>
-    <h1>Start of yet another project lol</h1>
+    <header class="header">
+        <h1 class="title">Tic-Tac-Toe</h1>
+    </header>
+    <div class="content">
+        <div class="gameannouncement">
+
+        </div>
+        <div class="gameboard">
+            <div class="field" id="field-1" data-box="0"></div>
+            <div class="field" id="field-2" data-box="1"></div>
+            <div class="field" id="field-3" data-box="2"></div>
+            <div class="field" id="field-4" data-box="3"></div>
+            <div class="field" id="field-5" data-box="4"></div>
+            <div class="field" id="field-6" data-box="5"></div>
+            <div class="field" id="field-7" data-box="6"></div>
+            <div class="field" id="field-8" data-box="7"></div>
+            <div class="field" id="field-9"data-box="8"></div>
+        </div>
+        <button class="restart-button">Restart</button>
+    </div>
 </body>
 </html>
